2003-01-02  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/BufferedInputStream/SimpleRead.java (test):
	Removed wrong check(false).

2002-12-27  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/StringWriter/Test.java (test): Catch Throwable
	when testing close to make it compile against libraries that don't
	declare IOException for close.

2002-12-27  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/StringWriter/Test.java:
	Modified close() test to catch IOException explicitly

2002-12-27  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FileOutputStream/jdk12.java:
	Added test for correct Exception thrown from constructor

2002-12-26  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FilterWriter/write.java:
	Added tests for FilterWriter class

2002-12-26  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedStream/close.java:
	Modified test of input stream close() method to match reference
	behavior.

2002-12-26  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FilterReader/SimpleRead.java:
	* gnu/testlet/java/io/FilterReader/MarkReset.java:
	Added tests for FilterReader class

2002-12-26  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/OutputStream/Test.java:
	Added tests for OutputStream class

2002-12-26  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/InputStream/Test.java:
	Added tests for InputStream class

2002-12-25  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/Reader/Test.java:
	Added tests for Reader class

2002-12-25  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/Writer/Test.java:
	Added tests for Writer class

2002-12-25  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedStream/Test.java:
	Added test of PipedOutputStream's connect() method.  See
	corresponding patch to PipedOutputStream class.

2002-12-25  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/StringReader/Test.java:
	Added tests for StringReader class
